# mcp_gen

./: Cargo.toml  README.md  build.rs
src/: lib.rs  types.rs
src/mcp_types/: generated.rs  mod.rs
