[package]
name = "mcp_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = { git = "https://github.com/oxidecomputer/typify.git", branch = "main" }
