[package]
name = "mcp_typegen"
description = "A library that exposes the model context protocol specificiation as rust types by generating types from a Model Context Protocol JSON files"
version = "0.1.0"
edition = "2021"
authors = ["Emil Lindfors <[email protected]>"]
keywords = ["gen", "anthropic"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

[build-dependencies]
schemars = "0.8"
prettyplease = "0.2"
serde_json = "1.0"
syn = "2.0"
typify = "0.2.0"
